<resources>
    <string name="app_name">SQLitePractice1</string>
    <string name="toolbarName">Потребительская корзина</string>
    <string name="exit">Выход</string>
    <string name="name">Продукт</string>
    <string name="weight">Вес</string>
    <string name="price">Цена</string>
    <string name="save">Сохранить</string>
    <string name="remove">Очистить базу</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="inputName">Введите название</string>
    <string name="inputWeight">Введите вес</string>
    <string name="inputPrice">Введите стоимость</string>
</resources>