<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundRed"
        app:title="@string/toolbarName"
        app:titleTextColor="@color/black"/>

    <include layout="@layout/table_panel"/>

    <Button
        android:id="@+id/saveButtonBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/changeButtonBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/deleteButtonBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>